fix avt and Add Chat
